<resources>
    <string name="app_name">Zoda</string>
    <string name="zoda">Zoda</string>
    <string name="know_your_zodiac_sign">Know your Zodiac Sign</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="birth_day">Birth Day</string>
    <string name="birth_month">Birth Month</string>
    <string name="name">Name</string>
    <string name="zodaicon">ZodaIcon</string>
    <string name="loading_info">Loading info...</string>
    <string name="traitinfo">traitInfo</string>
    <string name="keyphrase">keyPhrase</string>
    <string name="traits">traits</string>
    <string name="element">element</string>
    <string name="info">info</string>
    <string name="zodaicon1">zodaicon1</string>
    <string name="know_your_zodiac">Know your zodiac</string>
    <string name="warning">Warning</string>
    <string name="imagesplash">imageSplash</string>
    <string name="zodasplash">zodasplash</string>
    <string name="zodaimg">zodaimg</string>
    <string name="the_zoda_app">Zoda</string>
    <string name="zoda_app">Zoda</string>
    <string name="textview_dialog">TextView</string>
    <string name="loading">Loading...</string>
    <string name="please_wait">please wait...</string>
    <string name="loading_wait">Loading...</string>
    <string name="zodiacsign">Zodiacsign</string>
    <string name="birth_day_eg_31">Birth Day(Eg. 31)</string>
</resources>